[package]
name = "fired"
description = "Fancy interface rust ed derivate"
version = "0.1.0"
#homepage = "https://github.com/sidju/fired"
repository = "https://github.com/sidju/fired"
#readme = "README.md"
#categories = ["text-editors"]
#keywords = ["ed", "syntax-highlighting", "cli", "tui"]
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

[dependencies]
