[package]
name = "fired"
description = "Fancy interface rust ed derivate"
version = "0.1.0"
#homepage = "https://github.com/sidju/fired"
repository = "https://github.com/sidju/fired"
#readme = "README.md"
#categories = ["text-editors"]
#keywords = ["ed", "syntax-highlighting", "cli", "tui"]
authors = ["sidju <contact@sidju.se>"]
license = "MIT"
edition = "2021"

[dependencies]
add-ed = { version = "0.14.0", features = ["serde", "initial_input_data"] }
directories = "6.0.0"
figment = { version = "0.10.19", features = ["yaml", "env"] }
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
two-face = { version = "0.4.3", default-features = false, features = ["syntect-fancy"] }
